# peerlab-bird-config

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: cicd.yml
src/: bird.rs  config.rs  headscale.rs  main.rs  peerlab.rs
