[package]
name = "peerlab-bird-config"
version = "0.1.0"
edition = "2021"
authors = ["Matthieu Gouel <matthieu@nxthdr.dev>"]
description = "Generate BIRD BGP configuration from Headscale API for peerlab"
license = "MIT"

[dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
sha2 = "0.10"
chrono = "0.4"
